crates/parser/tests/snapshots/statements/valid/0046@2.snap
---
source: crates/parser/tests/statement_parser_test.rs
description: "CREATE TYPE type1 AS (attr1 int4, attr2 bool);"
---
Parse {
    cst: SourceFile@0..46
      Create@0..6 "CREATE"
      Whitespace@6..7 " "
      TypeP@7..11 "TYPE"
      Whitespace@11..12 " "
      Ident@12..17 "type1"
      Whitespace@17..18 " "
      As@18..20 "AS"
      Whitespace@20..21 " "
      Ascii40@21..22 "("
      Ident@22..27 "attr1"
      Whitespace@27..28 " "
      Ident@28..32 "int4"
      Ascii44@32..33 ","
      Whitespace@33..34 " "
      Ident@34..39 "attr2"
      Whitespace@39..40 " "
      Ident@40..44 "bool"
      Ascii41@44..45 ")"
      Ascii59@45..46 ";"
    ,
    errors: [],
    stmts: [],
}
