crates/parser/tests/snapshots/statements/valid/0046@3.snap
---
source: crates/parser/tests/statement_parser_test.rs
description: "CREATE TYPE type1 AS (attr1 int4 COLLATE collation1, attr2 bool);"
---
Parse {
    cst: SourceFile@0..65
      Create@0..6 "CREATE"
      Whitespace@6..7 " "
      TypeP@7..11 "TYPE"
      Whitespace@11..12 " "
      Ident@12..17 "type1"
      Whitespace@17..18 " "
      As@18..20 "AS"
      Whitespace@20..21 " "
      Ascii40@21..22 "("
      Ident@22..27 "attr1"
      Whitespace@27..28 " "
      Ident@28..32 "int4"
      Whitespace@32..33 " "
      Collate@33..40 "COLLATE"
      Whitespace@40..41 " "
      Ident@41..51 "collation1"
      Ascii44@51..52 ","
      Whitespace@52..53 " "
      Ident@53..58 "attr2"
      Whitespace@58..59 " "
      Ident@59..63 "bool"
      Ascii41@63..64 ")"
      Ascii59@64..65 ";"
    ,
    errors: [],
    stmts: [],
}
