crates/parser/tests/snapshots/statements/valid/0047@4.snap
---
source: crates/parser/tests/statement_parser_test.rs
description: CREATE DATABASE x LOCATION DEFAULT;
---
Parse {
    cst: SourceFile@0..35
      CreatedbStmt@0..35
        Create@0..6 "CREATE"
        Whitespace@6..7 " "
        Database@7..15 "DATABASE"
        Whitespace@15..16 " "
        Ident@16..17 "x"
        Whitespace@17..18 " "
        DefElem@18..34
          Location@18..26 "LOCATION"
          Whitespace@26..27 " "
          Default@27..34 "DEFAULT"
        Ascii59@34..35 ";"
    ,
    errors: [],
    stmts: [
        RawStmt {
            stmt: CreatedbStmt(
                CreatedbStmt {
                    dbname: "x",
                    options: [
                        Node {
                            node: Some(
                                DefElem(
                                    DefElem {
                                        defnamespace: "",
                                        defname: "location",
                                        arg: None,
                                        defaction: DefelemUnspec,
                                        location: 18,
                                    },
                                ),
                            ),
                        },
                    ],
                },
            ),
            range: 0..34,
        },
    ],
}
