crates/parser/tests/snapshots/statements/valid/0047@5.snap
---
source: crates/parser/tests/statement_parser_test.rs
description: CREATE DATABASE x TABLESPACE abc;
---
Parse {
    cst: SourceFile@0..33
      CreatedbStmt@0..33
        Create@0..6 "CREATE"
        Whitespace@6..7 " "
        Database@7..15 "DATABASE"
        Whitespace@15..16 " "
        Ident@16..17 "x"
        Whitespace@17..18 " "
        DefElem@18..32
          Tablespace@18..28 "TABLESPACE"
          Whitespace@28..29 " "
          Ident@29..32 "abc"
        Ascii59@32..33 ";"
    ,
    errors: [],
    stmts: [
        RawStmt {
            stmt: CreatedbStmt(
                CreatedbStmt {
                    dbname: "x",
                    options: [
                        Node {
                            node: Some(
                                DefElem(
                                    DefElem {
                                        defnamespace: "",
                                        defname: "tablespace",
                                        arg: Some(
                                            Node {
                                                node: Some(
                                                    String(
                                                        String {
                                                            sval: "abc",
                                                        },
                                                    ),
                                                ),
                                            },
                                        ),
                                        defaction: DefelemUnspec,
                                        location: 18,
                                    },
                                ),
                            ),
                        },
                    ],
                },
            ),
            range: 0..32,
        },
    ],
}
