crates/parser/tests/snapshots/statements/valid/0049@1.snap
---
source: crates/parser/tests/statement_parser_test.rs
description: CREATE EXTENSION x;
---
Parse {
    cst: SourceFile@0..19
      CreateExtensionStmt@0..19
        Create@0..6 "CREATE"
        Whitespace@6..7 " "
        Extension@7..16 "EXTENSION"
        Whitespace@16..17 " "
        Ident@17..18 "x"
        Ascii59@18..19 ";"
    ,
    errors: [],
    stmts: [
        RawStmt {
            stmt: CreateExtensionStmt(
                CreateExtensionStmt {
                    extname: "x",
                    if_not_exists: false,
                    options: [],
                },
            ),
            range: 0..18,
        },
    ],
}
