crates/parser/tests/snapshots/statements/valid/0051@10.snap
---
source: crates/parser/tests/statement_parser_test.rs
description: "CREATE INDEX pointloc ON points USING gist (box(location,location));"
---
Parse {
    cst: SourceFile@0..68
      IndexStmt@0..68
        Create@0..6 "CREATE"
        Whitespace@6..7 " "
        Index@7..12 "INDEX"
        Whitespace@12..13 " "
        Ident@13..21 "pointloc"
        Whitespace@21..22 " "
        On@22..24 "ON"
        Whitespace@24..25 " "
        RangeVar@25..31
          Ident@25..31 "points"
        Whitespace@31..32 " "
        Using@32..37 "USING"
        Whitespace@37..38 " "
        Ident@38..42 "gist"
        Whitespace@42..43 " "
        Ascii40@43..44 "("
        IndexElem@44..65
          FuncCall@44..65
            Ident@44..47 "box"
            Ascii40@47..48 "("
            ColumnRef@48..56
              Location@48..56 "location"
            Ascii44@56..57 ","
            ColumnRef@57..65
              Location@57..65 "location"
        Ascii41@65..66 ")"
        Ascii41@66..67 ")"
        Ascii59@67..68 ";"
    ,
    errors: [],
    stmts: [
        RawStmt {
            stmt: IndexStmt(
                IndexStmt {
                    idxname: "pointloc",
                    relation: Some(
                        RangeVar {
                            catalogname: "",
                            schemaname: "",
                            relname: "points",
                            inh: true,
                            relpersistence: "p",
                            alias: None,
                            location: 25,
                        },
                    ),
                    access_method: "gist",
                    table_space: "",
                    index_params: [
                        Node {
                            node: Some(
                                IndexElem(
                                    IndexElem {
                                        name: "",
                                        expr: Some(
                                            Node {
                                                node: Some(
                                                    FuncCall(
                                                        FuncCall {
                                                            funcname: [
                                                                Node {
                                                                    node: Some(
                                                                        String(
                                                                            String {
                                                                                sval: "box",
                                                                            },
                                                                        ),
                                                                    ),
                                                                },
                                                            ],
                                                            args: [
                                                                Node {
                                                                    node: Some(
                                                                        ColumnRef(
                                                                            ColumnRef {
                                                                                fields: [
                                                                                    Node {
                                                                                        node: Some(
                                                                                            String(
                                                                                                String {
                                                                                                    sval: "location",
                                                                                                },
                                                                                            ),
                                                                                        ),
                                                                                    },
                                                                                ],
                                                                                location: 48,
                                                                            },
                                                                        ),
                                                                    ),
                                                                },
                                                                Node {
                                                                    node: Some(
                                                                        ColumnRef(
                                                                            ColumnRef {
                                                                                fields: [
                                                                                    Node {
                                                                                        node: Some(
                                                                                            String(
                                                                                                String {
                                                                                                    sval: "location",
                                                                                                },
                                                                                            ),
                                                                                        ),
                                                                                    },
                                                                                ],
                                                                                location: 57,
                                                                            },
                                                                        ),
                                                                    ),
                                                                },
                                                            ],
                                                            agg_order: [],
                                                            agg_filter: None,
                                                            over: None,
                                                            agg_within_group: false,
                                                            agg_star: false,
                                                            agg_distinct: false,
                                                            func_variadic: false,
                                                            funcformat: CoerceExplicitCall,
                                                            location: 44,
                                                        },
                                                    ),
                                                ),
                                            },
                                        ),
                                        indexcolname: "",
                                        collation: [],
                                        opclass: [],
                                        opclassopts: [],
                                        ordering: SortbyDefault,
                                        nulls_ordering: SortbyNullsDefault,
                                    },
                                ),
                            ),
                        },
                    ],
                    index_including_params: [],
                    options: [],
                    where_clause: None,
                    exclude_op_names: [],
                    idxcomment: "",
                    index_oid: 0,
                    old_node: 0,
                    old_create_subid: 0,
                    old_first_relfilenode_subid: 0,
                    unique: false,
                    nulls_not_distinct: false,
                    primary: false,
                    isconstraint: false,
                    deferrable: false,
                    initdeferred: false,
                    transformed: false,
                    concurrent: false,
                    if_not_exists: false,
                    reset_default_tblspc: false,
                },
            ),
            range: 0..67,
        },
    ],
}
