crates/parser/tests/snapshots/statements/valid/0051@11.snap
---
source: crates/parser/tests/statement_parser_test.rs
description: CREATE INDEX CONCURRENTLY sales_quantity_index ON sales_table (quantity);
---
Parse {
    cst: SourceFile@0..73
      IndexStmt@0..73
        Create@0..6 "CREATE"
        Whitespace@6..7 " "
        Index@7..12 "INDEX"
        Whitespace@12..13 " "
        Concurrently@13..25 "CONCURRENTLY"
        Whitespace@25..26 " "
        Ident@26..46 "sales_quantity_index"
        Whitespace@46..47 " "
        On@47..49 "ON"
        Whitespace@49..50 " "
        RangeVar@50..61
          Ident@50..61 "sales_table"
        Whitespace@61..62 " "
        Ascii40@62..63 "("
        IndexElem@63..71
          Ident@63..71 "quantity"
        Ascii41@71..72 ")"
        Ascii59@72..73 ";"
    ,
    errors: [],
    stmts: [
        RawStmt {
            stmt: IndexStmt(
                IndexStmt {
                    idxname: "sales_quantity_index",
                    relation: Some(
                        RangeVar {
                            catalogname: "",
                            schemaname: "",
                            relname: "sales_table",
                            inh: true,
                            relpersistence: "p",
                            alias: None,
                            location: 50,
                        },
                    ),
                    access_method: "btree",
                    table_space: "",
                    index_params: [
                        Node {
                            node: Some(
                                IndexElem(
                                    IndexElem {
                                        name: "quantity",
                                        expr: None,
                                        indexcolname: "",
                                        collation: [],
                                        opclass: [],
                                        opclassopts: [],
                                        ordering: SortbyDefault,
                                        nulls_ordering: SortbyNullsDefault,
                                    },
                                ),
                            ),
                        },
                    ],
                    index_including_params: [],
                    options: [],
                    where_clause: None,
                    exclude_op_names: [],
                    idxcomment: "",
                    index_oid: 0,
                    old_node: 0,
                    old_create_subid: 0,
                    old_first_relfilenode_subid: 0,
                    unique: false,
                    nulls_not_distinct: false,
                    primary: false,
                    isconstraint: false,
                    deferrable: false,
                    initdeferred: false,
                    transformed: false,
                    concurrent: true,
                    if_not_exists: false,
                    reset_default_tblspc: false,
                },
            ),
            range: 0..72,
        },
    ],
}
