crates/parser/tests/snapshots/statements/valid/0053@4.snap
---
source: crates/parser/tests/statement_parser_test.rs
description: "CREATE PUBLICATION insert_only FOR TABLE mydata WITH (publish = 'insert');"
---
Parse {
    cst: SourceFile@0..74
      CreatePublicationStmt@0..74
        Create@0..6 "CREATE"
        Whitespace@6..7 " "
        Publication@7..18 "PUBLICATION"
        Whitespace@18..19 " "
        Ident@19..30 "insert_only"
        Whitespace@30..31 " "
        For@31..34 "FOR"
        Whitespace@34..35 " "
        Table@35..40 "TABLE"
        Whitespace@40..41 " "
        PublicationObjSpec@41..47
          PublicationTable@41..47
            RangeVar@41..47
              Ident@41..47 "mydata"
        Whitespace@47..48 " "
        With@48..52 "WITH"
        Whitespace@52..53 " "
        Ascii40@53..54 "("
        DefElem@54..72
          Ident@54..61 "publish"
          Whitespace@61..62 " "
          Ascii61@62..63 "="
          Whitespace@63..64 " "
          Sconst@64..72 "'insert'"
        Ascii41@72..73 ")"
        Ascii59@73..74 ";"
    ,
    errors: [],
    stmts: [
        RawStmt {
            stmt: CreatePublicationStmt(
                CreatePublicationStmt {
                    pubname: "insert_only",
                    options: [
                        Node {
                            node: Some(
                                DefElem(
                                    DefElem {
                                        defnamespace: "",
                                        defname: "publish",
                                        arg: Some(
                                            Node {
                                                node: Some(
                                                    String(
                                                        String {
                                                            sval: "insert",
                                                        },
                                                    ),
                                                ),
                                            },
                                        ),
                                        defaction: DefelemUnspec,
                                        location: 54,
                                    },
                                ),
                            ),
                        },
                    ],
                    pubobjects: [
                        Node {
                            node: Some(
                                PublicationObjSpec(
                                    PublicationObjSpec {
                                        pubobjtype: PublicationobjTable,
                                        name: "",
                                        pubtable: Some(
                                            PublicationTable {
                                                relation: Some(
                                                    RangeVar {
                                                        catalogname: "",
                                                        schemaname: "",
                                                        relname: "mydata",
                                                        inh: true,
                                                        relpersistence: "p",
                                                        alias: None,
                                                        location: 41,
                                                    },
                                                ),
                                                where_clause: None,
                                                columns: [],
                                            },
                                        ),
                                        location: 0,
                                    },
                                ),
                            ),
                        },
                    ],
                    for_all_tables: false,
                },
            ),
            range: 0..73,
        },
    ],
}
